# comarkdown

./: .ghci  .gitignore  README.md  cabal.config  comarkdown.cabal  stack.yaml  wwwtex.cabal
exe/: Main.hs
lib/Control/Monad/: Extra.hs
lib/Text/: Comarkdown.hs
lib/Text/Comarkdown/: Combinators.hs  Parser.hs  Stdlib.hs  Types.hs
lib/Text/Comarkdown/Combinators/: Primitives.hs
skel/: Skel.hs
spec/: CommandSpec.hs  HeaderSpec.hs  Helper.hs  Spec.hs  TestTypes.hs
spec/TestTypes/: Numeric.hs  Text.hs
spec/TestTypes/Header/: ATX.hs  Setext.hs
src/Text/: Comarkdown.hs
src/Text/Comarkdown/: Parser.hs  Types.hs
src/lib/Text/: Comarkdown.hs  Comd.hs
src/lib/Text/Comarkdown/: Combinators.hs  Parser.hs  Stdlib.hs  Types.hs
src/skel/: Skel.hs
src/tests/: ExamplesSpec.hs  NoFormattingSpec.hs  NonsenseSpec.hs  Spec.hs  Types.hs  TypesSpec.hs
src/tests/examples/: 01.in.comd  01.out.md  02.in.comd  04.in.comd  04.out.md
src/tests/no-formatting-examples/: pager-readme.md
tests/: .dir-locals.el  CompilerSpec.hs  ExamplesSpec.hs  IOExamples.hs  NoFormattingSpec.hs  ParsingSpec.hs  TestTypes.hs  Types.hs  TypesSpec.hs
tests/Parsers/: LetSpec.hs  NonsenseSpec.hs
tests/examples/: 01.in.comd  01.out.md  02.in.md  02.out.md  03.out.md  04.in.comd  04.out.md
tests/io-examples/: readme.in.md  readme.out.md
tests/no-formatting-examples/: irc-data-readme.md
