name:                comarkdown
version:             0.1.0.0
synopsis:            A preprocessor for programmable documents.
description:
  Comarkdown is a preprocessor for plain-text documents of any format, although
  it was originally intended for
  <http://www.pandoc.org/README.html#pandocs-markdown Pandoc's Markdown>. At the
  moment, it's very simple, and not even functional.

homepage:            https://github.com/pharpend/comarkdown
bug-reports:         https://github.com/pharpend/comarkdown/issues
license:             GPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright 2015 Peter Harpending
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  LICENSE
  README.md
  tests/examples/*.md

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall -fno-warn-unused-do-bind
  default-extensions:
    LambdaCase
    OverloadedLists
    Trustworthy
  build-depends:
      base ==4.8.*
    , bytestring
    , containers
    , parsec
    , text
    , vector
  exposed-modules:
    Text.Comarkdown
    Text.Comarkdown.Parser
    Text.Comarkdown.Types

test-suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          Spec.hs
  ghc-options: -Wall -threaded
  default-extensions:
    LambdaCase
    OverloadedLists
  other-extensions:
    OverloadedStrings
  other-modules:
    ExamplesSpec
    Parsers.LetSpec
    Parsers.NonsenseSpec
    Types
  build-depends:
      base
    , bytestring
    , comarkdown
      -- needed for 'makeAbsolute'
    , directory >=1.2.2.0
    , hspec
    , parsec
    , QuickCheck
    , text
    , vector

source-repository head
  type:     git
  location: git://github.com/pharpend/comarkdown.git