name:                comarkdown
version:             0.1.0.0
synopsis:            A preprocessor for programmable documents.
description:
  Comarkdown is a preprocessor for plain-text documents of any format, although
  it was originally intended for
  <http://www.pandoc.org/README.html#pandocs-markdown Pandoc's Markdown>. At the
  moment, it's very simple, and not even functional.
homepage:            https://github.com/pharpend/comarkdown
bug-reports:         https://github.com/pharpend/comarkdown/issues
license:             GPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright 2015 Peter Harpending
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  LICENSE
  README.md
  tests/io-examples/*.md
  tests/no-formatting-examples/*.md

library
  default-language:   Haskell2010
  hs-source-dirs:     lib
  ghc-options:        -Wall -fno-warn-unused-do-bind
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RankNTypes
    Trustworthy
  build-depends:
      aeson
    , base ==4.8.*
    , bifunctors
    , bytestring
    , data-default
    , exceptional >=0.3
    , exceptions
    , hashable
    , mtl
    , pandoc
    , parsec
    , safe
    , text
    , transformers
    , unordered-containers
    , vector
  exposed-modules:
    Text.Comarkdown
    Text.Comarkdown.Combinators
    Text.Comarkdown.Combinators.Primitives
    Text.Comarkdown.Parser
    Text.Comarkdown.Stdlib
    Text.Comarkdown.Types

test-suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          Spec.hs
  ghc-options:
    -Wall -threaded -fno-warn-orphans
  default-extensions:
    FlexibleInstances
    LambdaCase
    OverloadedLists
    OverloadedStrings
  other-modules:
    ExamplesSpec
    NoFormattingSpec
    TestTypes
  build-depends:
      base
    , bytestring
    , comarkdown
    , Diff
    , directory
    , hspec
    , pandoc
    , QuickCheck
    , text

source-repository head
  type:     git
  location: git://github.com/pharpend/comarkdown.git
