name:                 wwwtex
version:              0.1.0.0
synopsis:             A markup language for writing math.
description:         
  I am the author of a math textbook, <http://www.learnyou.org LYSA>. I
  unfortunately have to publish my math textbook as a PDF, rather than a more
  convenient online thing. This is because
  .
  * No web markup language supports macros
  .
  * It's very difficult to convert LaTeX to HTML.
  .
  So this is a brand new markup language. It's based off of Markdown's
  syntax, but it has something equivalent to LaTeX's macros and environments.
  .
  I hate the name WWWTeX, so anyone is welcome to chip in name suggestions.
  .
  Other contributions are of course welcome, but especially name suggestions.
    
homepage:             https://github.com/pharpend/wwwtex
bug-reports:          https://github.com/pharpend/wwwtex/issues
license:              GPL-3
license-file:         LICENSE
author:               Peter Harpending
maintainer:           peter@harpending.org
copyright:            Copyright 2015 Peter Harpending
category:             Text
build-type:           Simple
cabal-version:        >=1.10
extra-source-files:  
  README.md
  LICENSE

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  build-depends:       base ==4.8.*

source-repository head
  type:                 git
  location:             https://github.com/pharpend/wwwtex.git
